# Assembler-and-Emulator-for-Custom-ISA

./: Cargo.toml  README.md
scripts/: hello_world.asm2  pong.asm2  rng_test.asm2  screen_testing.asm2
scripts/ray_casting/: basic_rendering.asm2  core_functions.asm2  main.asm2  ray_casting.asm2
src/: keyboard.rs  main.rs  window.rs
